--- a/TXBtool/TXBtool.csproj
+++ b/TXBtool/TXBtool.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>C:\Users\penguino\Desktop\ggi\TXBTool\bin\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
   </PropertyGroup>
 
 </Project>
